# mcp_superiorapis_remote

./: .env.example  .gitignore  MCP_JSONRPC_EXAMPLES.md  README.md  README.zh.md  dify_mcp_config.json  dify_mcp_standalone.py  mcp_config_example.json  pyproject.toml  test_mcp_config.py  validate_server.py
src/mcp_superiorapis_remote/: __init__.py  config.py  mcp_server_http.py  mcp_server_sse.py
tests/: test_http_server.html  test_main.py  test_sse_server.html
